--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="images/favicon.ico" />
+    <title>SaveMonke</title>
     <link rel="stylesheet" href="style.css" />
-      <script src="script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="background"></div>
@@ -22,5 +23,4 @@
       <span class="score_val"></span>
     </div>
   </body>
-
 </html>
